[package]
name = "jwks"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
rsa = { version = "0.9", features = ["sha2", "pem"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
